Make download service :remote to trigger Binder IPC

--- a/delegate-message/app/src/main/AndroidManifest.xml
+++ b/delegate-message/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <service
             android:name=".services.DownloadsService"
             android:exported="false"
+            android:process=":remote"
             />
     </application>
 
