--- a/delegate-message/app/src/main/AndroidManifest.xml
+++ b/delegate-message/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:exported="false"
             android:process=":remote"
             />
+        <service android:name=".services.WordlyService"/>
     </application>
 
 </manifest>
