--- a/delegate-message/app/src/main/AndroidManifest.xml
+++ b/delegate-message/app/src/main/AndroidManifest.xml
@@ -20,11 +20,14 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".services.DownloadsService"
+            android:name=".services.DownloadsIntentService"
             android:exported="false"
             android:process=":remote"
             />
         <service android:name=".services.WordlyService"/>
+        <service android:name=".services.DownloadScheduledJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false" />
     </application>
 
 </manifest>
